Ajustes: - Titulo do site - NoTranslate Blog - Robots.txt

--- a/src/app/core/components/header/header.html
+++ b/src/app/core/components/header/header.html
@@ -21,7 +21,7 @@
               <a class="header__link" role="menuitem" [routerLink]="['/sobre']" routerLinkActive="router-link-active">Sobre</a>
             </li>
             <li role="none">
-              <a class="header__link" role="menuitem" [routerLink]="['/blog']" routerLinkActive="router-link-active">Blog</a>
+              <a class="header__link" role="menuitem" [routerLink]="['/blog']" translate="no" routerLinkActive="router-link-active">Blog</a>
             </li>
             <li role="none">
               <a class="header__link" role="menuitem" href="https://lisolaserfranchising.com.br/seja-um-franqueado/" target="_blank">seja um franqueado</a>
